Week 9 - JSON Tutorial - Fixing too much flex

--- a/assignments/lesson-9/heroes/style.css
+++ b/assignments/lesson-9/heroes/style.css
@@ -23,6 +23,7 @@ html {
   }
  
   header p {
+    display: block;
     font-size: 1.3rem;
     font-weight: bold;
     text-align: center;
@@ -34,16 +35,23 @@ html {
     display: inline-flex;
     flex-wrap: wrap;
   }
-  
+
+  section article {
+    display: inline-flex;
+    flex-wrap: wrap;
+  }
+
   section p {
     margin: 5px 0;
   }
   
   section ul {
+    display: block;
     margin-top: 0;
   }
   
   h2 {
+    display: block;
     font-size: 2.5rem;
     margin-bottom: 10px;
   }
